# Robot-2013

./: .cproject  .project  .styleguide  .wrmakefile  .wrproject  Autonomous.cpp  ButtonTracker.cpp  ButtonTracker.hpp  CMakeLists.txt  COPYING  Disabled.cpp  DriverStationDisplay.cpp  DriverStationDisplay.hpp  DriverStationDisplay.inl  GUISettings.txt  GeartoothEncoder.cpp  GeartoothEncoder.hpp  Gyro.cpp  Gyro.h  KalmanFilter.cpp  KalmanFilter.hpp  LICENSE.txt  LiveGrapherClient.cpp  LiveGrapherClient.hpp  LiveGrapherHost.cpp  LiveGrapherHost.hpp  MecanumDrive.cpp  MecanumDrive.hpp  NonCopyable.hpp  OperatorControl.cpp  OurRobot.cpp  OurRobot.hpp  PIDController.cpp  PIDController.hpp  README.md  RWProtect.cpp  RWProtect.hpp  ReadWriteProtector.cpp  ReadWriteProtector.hpp  RobotSettings.txt  (+7 more)
AutonomousModes/: AutonCenter.cpp  AutonCenterMove.cpp  AutonCenterShoot.cpp  AutonFeed.cpp  AutonLeftMove.cpp  AutonLeftShoot.cpp  AutonRightMove.cpp  AutonRightShoot.cpp  AutonShoot.cpp  AutonTwoDisc.cpp
KalmanGyro/: FilterBase.cpp  FilterBase.hpp  GyroBase.cpp  GyroBase.hpp  GyroFilter.cpp  GyroFilter.hpp  ITG3200_ADXL345.cpp  ITG3200_ADXL345.hpp  KOP_ADXL345.cpp  KOP_ADXL345.hpp  KalmanGyro.cpp  KalmanGyro.hpp  KopGyro.cpp  KopGyro.hpp
Kinect/: DriveKinect.cpp  DriveKinect.hpp  KinectBase.cpp  KinectBase.hpp  TurretKinect.cpp  TurretKinect.hpp
LiveGrapherHost/: GraphHost.cpp  GraphHost.hpp  graphhost-p.cpp  graphhost-p.hpp  graphhost.c  graphhost.h  list.c  queue.c  queue.h  stdint.h
SFML/: Config.hpp
SFMLNetwork/: CMakeLists.txt  Ftp.cpp  Http.cpp  IpAddress.cpp  Packet.cpp  Socket.cpp  Socket.hpp  SocketImpl.hpp  SocketSelector.cpp  TcpListener.cpp  TcpSocket.cpp  UdpSocket.cpp
SFMLSystem/: CMakeLists.txt  Clock.cpp  Err.cpp  Lock.cpp  Mutex.cpp  Sleep.cpp  String.cpp  Thread.cpp  ThreadLocal.cpp  Time.cpp
SFMLSystem/VxWorks/: ClockImpl.cpp  ClockImpl.hpp  MutexImpl.cpp  MutexImpl.hpp  SleepImpl.cpp  SleepImpl.hpp  ThreadImpl.cpp  ThreadImpl.hpp  ThreadLocalImpl.cpp  ThreadLocalImpl.hpp
Subsystems/: Feeder.cpp  Feeder.hpp  MecanumDrive.cpp  MecanumDrive.hpp  Shooter.cpp  Shooter.hpp
src/: AutonContainer.hpp  AutonContainer.inl  ButtonTracker.cpp  ButtonTracker.hpp  DriverStationDisplay.cpp  DriverStationDisplay.hpp  DriverStationDisplay.inl  GeartoothEncoder.cpp  GeartoothEncoder.hpp  KalmanFilter.cpp  KalmanFilter.hpp  PIDController.cpp  PIDController.hpp  Robot.cpp  Robot.hpp  (+2 more)
(+92 files in other folders)
